--- a/index.html
+++ b/index.html
@@ -33,9 +33,28 @@
                     <a href="#" id="profile"><i class="fa-solid fa-user"></i></a>
                 </div>
             </div>
+            <div class="hamburger" >
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </div>
+
     </header>
     <!-- header end -->
+
+
+    <!-- slidebar Start -->
+
+    <div class="slidebar">
+        <ul class="slide_bar_items">
+            <li>Home</li>
+            <li>Contact</li>
+            <li>About</li>
+            <li>Cart</li>
+            <li>Profile</li>
+        </ul>
+    </div>
+
+    <!-- slidebar end -->
 
     <!-- Contact Card Secsion Start -->
     <div class="contact_form" id="contact">
